# nowacontrol-hydraulic-sensor

./: .gitattributes  .gitignore  CLAUDE.md  CODEX.md  README.md  hacs.json
.claude/: settings.json  settings.local.example.json
.claude/agents/: backend-engineer.md  browser-tester.md  firmware-mg24.md  firmware-ota-engineer.md  frontend-engineer.md  power-rf-hardware.md  qa-release-manager.md  regulatory-compliance.md  saas-architect.md  security-reviewer.md  technical-writer.md  zigbee-ha-integrator.md
.claude/rules/: 00-core.md  10-testing.md  20-security.md  30-release.md  40-api.md  50-frontend.md  60-firmware.md  70-docs.md
.claude/skills/implement-api/: SKILL.md
.claude/skills/implement-firmware/: SKILL.md
.claude/skills/implement-frontend/: SKILL.md
.claude/skills/intake-feature/: SKILL.md
.claude/skills/matter-thread-ble-roadmap/: SKILL.md
.claude/skills/mg24-board-bringup/: SKILL.md
.claude/skills/ota-rollout/: SKILL.md
.claude/skills/postmortem/: SKILL.md
.claude/skills/power-rf-battery-review/: SKILL.md
.claude/skills/prepare-release/: SKILL.md
.claude/skills/release-ota-gate/: SKILL.md
.claude/skills/rf-compliance-review/: SKILL.md
.claude/skills/zigbee-ha-v1/: SKILL.md
.github/workflows/: release-firmware-ota.yml  release-homeassistant.yml  validate-homeassistant.yml
admin-portal/: README.md
custom_components/nowacontrol_hydraulic_sensor/: README.md  __init__.py  config_flow.py  const.py  manifest.json  quirks.py  repairs.py  services.py  services.yaml
custom_components/nowacontrol_hydraulic_sensor/quirks/: README.md  nowacontrol_hydraulic_sensor_v1.py
device-cloud/: README.md
docs/adr/: 0001-use-this-standard.md  0001-zigbee-only-v1-protocol-scope.md
docs/architecture/: codex-migration-target.md  firmware-baseline.md  repo-map.md
docs/hardware/: antenna-baseline.md  power-rf-review.md
docs/protocols/: zigbee-ha-v1.md
docs/release/: compliance-impact-note.md  v1-validation-matrix.md
docs/runbooks/: github-public-hacs-cutover.md  github-release-pipeline.md  homeassistant-hacs-rollout.md  homeassistant-instance-setup.md  mcp-onboarding.md  ota-rollback.md
homeassistant/zha_quirks/: README.md  nowacontrol_hydraulic_sensor_v1.py
marketing-site/: README.md
scripts/: flash-sensor.ps1
sensor-platform/: README.md
sensor-platform/firmware/applications/zigbee-ha/cmake_gcc/: CMakeLists.txt  CMakePresets.json  nowacontrol-zigbee-ha.cmake
sensor-platform/firmware/bootloader/: README.md
tools/scaffold/: apply-claude-ops.ps1  create-claude-workspaces.ps1  migrate-to-monorepo.ps1
(+78 files in other folders)
